# packtool

./: Cargo.toml  README.md
.github/workflows/: ci_check.yml
examples/: bitcoin.rs  tar.rs
packtool-macro/: Cargo.toml
packtool-macro/src/: context.rs  expand.rs  lib.rs  packed.rs
packtool-macro/src/ast/: container.rs  mod.rs  packed_attributes.rs  packed_enum.rs  packed_field.rs  packed_structure.rs  packed_tuple.rs  packed_unit.rs
src/: array.rs  error.rs  lib.rs  packet.rs  primitives.rs  tuple.rs  view.rs
tests/: chain.rs  enum.rs  struct.rs  unit_type.rs
