[package]
name = "packtool"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
description = "In memory packing made easy"
homepage = "https://github.com/primetype/packtool"
repository = "https://github.com/primetype/packtool/"
license = "MIT OR Apache-2.0"
keywords = [
    "packtool",
    "packing",
    "memory",
    "view",
    "format"
]
categories = [ "encoding", "parsing" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hex = "0.4.3"
packtool-macro = { path = "./packtool-macro", version = "0.1.0" }
thiserror = "1.0.25"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

# be kind with crates.io and only compile the doc once
# there's no difference based on the architecture anyway
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = [
    "packtool-macro"
]