[package]
name = "packtool-macro"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.60"

# be kind with crates.io and only compile the doc once
# there's no difference based on the architecture anyway
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
