[package]
name = "packtool-macro"
version = "0.3.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
description = "In memory packing made easy: procedural macro definitions"
homepage = "https://github.com/primetype/packtool"
repository = "https://github.com/primetype/packtool/"
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.18"

# be kind with crates.io and only compile the doc once
# there's no difference based on the architecture anyway
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
